syntax = "proto3";
package jp.chang.myclinic;

message WindowType {
    int32 windowId = 1;
}

message WqueueType {
    int32 visitId = 1;
    int32 waitState = 2;
}

message WqueueListType {
    repeated WqueueType wqueue = 1;
}

message VisitType {
    int32 visitId = 1;
}
