syntax = "proto3";
package jp.chang.myclinic.practice.grpc.generated;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "jp/chang/myclinic/common.proto";

message ChooseVisitInSelectWindowMessage {
    jp.chang.myclinic.WindowType window = 1;
    int32 visitId = 2;
}

message NewTextInputs {
    int32 visitId = 1;
    string content = 2;
}

message TextType {
    int32 visitId = 1;
    int32 textId = 2;
}

service PracticeMgmt {
    rpc IsRunning(google.protobuf.Empty) returns (google.protobuf.BoolValue);
    rpc ChooseSelectVisitMenuInMainPane(google.protobuf.Empty) returns (google.protobuf.BoolValue);
    rpc ChooseVisitInSelectVisitWindow(ChooseVisitInSelectWindowMessage) returns (google.protobuf.BoolValue);
    rpc FindSelectVisitWindow(google.protobuf.Empty) returns (jp.chang.myclinic.WindowType);
    rpc ListWqueue(jp.chang.myclinic.WindowType) returns (jp.chang.myclinic.WqueueListType);
    rpc GetCurrentPatientId(google.protobuf.Empty) returns (google.protobuf.Int32Value);
    rpc GetCurrentVisitId(google.protobuf.Empty) returns (google.protobuf.Int32Value);
    rpc IsRecordVisible(jp.chang.myclinic.VisitType) returns (google.protobuf.BoolValue);
    rpc ClickNewTextButton(jp.chang.myclinic.VisitType) returns (google.protobuf.BoolValue);
    rpc IsNewTextFormVisible(jp.chang.myclinic.VisitType) returns (google.protobuf.BoolValue);
    rpc SetNewTextInputs(NewTextInputs) returns (google.protobuf.BoolValue);
    rpc ClickEnterButtonInNextTextForm(jp.chang.myclinic.VisitType) returns (google.protobuf.BoolValue);
    rpc IsTextVisible(TextType) returns (google.protobuf.BoolValue);
}